--- a/STYLE.CSS
+++ b/STYLE.CSS
@@ -22,7 +22,7 @@
     box-shadow: 0px 3px 10pX #060606;
   }
   .box:hover .box-img img {
-    
+    width: 110px;
     color: black;
   }
   .box:hover .box-content h4 {
@@ -49,12 +49,6 @@
     color: #fff;
    
   }
-.navbar {
-  background-color: antiquewhite;
- 
-
-}
-
   
  
   
