--- a/style.css
+++ b/style.css
@@ -64,7 +64,10 @@
       }
 
       .box {
-  width: 100%;
+          width: 100%;}
+           .box-content {
+    color: #000000;
+  }
   
   border: 1px solid #000000;
   border-radius: 10px;
